--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -56,6 +56,7 @@
     <Compile Include="src\gui\stats.cs" />
     <Compile Include="src\gui\about.cs" />
     <Compile Include="src\gui\helpPorts.cs" />
+    <Compile Include="src\gui\dialogMessage.cs" />
     <Compile Include="src\jump.cs" />
     <Compile Include="src\jumpType.cs" />
     <Compile Include="src\pulse.cs" />
