working on "0.48 CVS" version, it has Event class, parent of jump, run and pulse added src/event.cs (makefile and csproj changed)
pulses code is working! currently only for "free pulse" type
treeviewPulse is working
last_event_delete for pulse is working

changed database version to 0.43 (adds de free pulseType). Correctly repaired in first chronojump 0.48 boot.

loadSession shows pulsesNum

added info on not-implemented-yet pulse buttons
improved some glade tooltips

--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -57,6 +57,7 @@
     <Compile Include="src\gui\about.cs" />
     <Compile Include="src\gui\helpPorts.cs" />
     <Compile Include="src\gui\dialogMessage.cs" />
+    <Compile Include="src\event.cs" />
     <Compile Include="src\jump.cs" />
     <Compile Include="src\jumpType.cs" />
     <Compile Include="src\pulse.cs" />
