now custom pulses can be done, expressed on seconds-between-pulses or ppm (nice for integrating with gtick), and unlimited or limited
progressbar works

added src/gui/pulse.cs (pulse extra). Makefile and csproj changed

--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -52,6 +52,7 @@
     <Compile Include="src\gui\report.cs" />
     <Compile Include="src\gui\run.cs" />
     <Compile Include="src\gui\runType.cs" />
+    <Compile Include="src\gui\pulse.cs" />
     <Compile Include="src\gui\session.cs" />
     <Compile Include="src\gui\stats.cs" />
     <Compile Include="src\gui\about.cs" />
