added missing src/gui/event.cs to POTFILES.in

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,6 +3,7 @@ src/chronojump_mini.cs
 src/chronojump.cs
 src/constants.cs
 src/exportSession.cs
+src/gui/event.cs
 src/gui/helpPorts.cs
 src/gui/jump.cs
 src/gui/jumpType.cs
