Doing: 65733 (Conditions for ending repetitive events). Done endingConditions.cs
svn path=/trunk/; revision=220

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -48,3 +48,5 @@ src/treeViewJump.cs
 src/treeViewPerson.cs
 src/treeViewPulse.cs
 src/treeViewRun.cs
+src/execute/reactionTime.cs
+src/treeViewReactionTime.cs
