repetitive_events works also for run (closed 65733) new feature!: shows "good", "bad" icons on eventExecute improvements on repetive_events close, delete
svn path=/trunk/; revision=222

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -51,3 +51,4 @@ src/treeViewPulse.cs
 src/treeViewRun.cs
 src/execute/reactionTime.cs
 src/treeViewReactionTime.cs
+src/gui/repetitiveConditions.cs
