--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -13,6 +13,7 @@ src/gui/jump.cs
 src/gui/jumpType.cs
 src/gui/person.cs
 src/gui/preferences.cs
+src/gui/pulse.cs
 src/gui/report.cs
 src/gui/run.cs
 src/gui/runType.cs
