--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -21,6 +21,7 @@ src/gui/session.cs
 src/gui/stats.cs
 src/platform.cs
 src/report.cs
+src/runType.cs
 src/sqlite/stat.cs
 src/statType.cs
 src/stats/cmjPlusPotency.cs
