gtk2 integration: -all onSelectionEntry() on treeviews work now:
gtk2 integration: 
 -all onSelectionEntry() on treeviews work now: sessionLoad, personRecuperateWindow, 
 PersonsRecuperateFromOtherSessionWindow, reportWindow, RepairEvents windows, treeviewPersons
 -1st combobox working: combo_jumps (pending: try on windows)
new features:
 -buttons for agility on runs
 -select graph works on more on runs & runsInterval. 
 -added mini/agility_hexagon.png
 -put "others" on menu, and include pulses and reaction time there
 -zoom button on image_test changed to gtk-info
 -chronojump_logo and report_css as resources (pending: try on windows)
 -chronojump_logo on startup
bugs fixed:
 -on not ending good reactionTime (EventType was not assigned)
 -if something is selected on jumps_runs_more, the dialogImageTest should have correct info
 -fixed CMJ_l name on DB
Cleaned code on all "more" gui and on loading glade

svn path=/trunk/; revision=249

--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -173,8 +173,12 @@
     <EmbeddedResource Include="images\mini\jump_sj_l.png" />
     <EmbeddedResource Include="images\jump_cmj.png" />
     <EmbeddedResource Include="images\mini\jump_cmj.png" />
+    <EmbeddedResource Include="images\jump_cmj_l.png" />
+    <EmbeddedResource Include="images\mini\jump_cmj_l.png" />
     <EmbeddedResource Include="images\jump_abk.png" />
     <EmbeddedResource Include="images\mini\jump_abk.png" />
+    <EmbeddedResource Include="images\jump_abk_l.png" />
+    <EmbeddedResource Include="images\mini\jump_abk_l.png" />
     <EmbeddedResource Include="images\jump_dj.png" />
     <EmbeddedResource Include="images\mini\jump_dj.png" />
     <EmbeddedResource Include="images\jump_rj.png" />
@@ -194,11 +198,8 @@
     <EmbeddedResource Include="images\mini\agility_20yard.png" />
     <EmbeddedResource Include="images\agility_505.png" />
     <EmbeddedResource Include="images\mini\agility_505.png" />
-<!--
-don't compile, hexagon mini isn't done
     <EmbeddedResource Include="images\agility_hexagon.png" />
     <EmbeddedResource Include="images\mini\agility_hexagon.png" />
--->
     <EmbeddedResource Include="images\agility_illinois.png" />
     <EmbeddedResource Include="images\mini\agility_illinois.png" />
     <EmbeddedResource Include="images\agility_shuttle.png" />
