gtk2 integration: ALL combos replaced for comoboxes -all test combos in main window, -PersonRecuperateFromOtherSessionWindow, PersonShowAllEventWindow -EditJump, EditJumpRj, EditRun, EditRunInterval -Preferences, stats, languageWindow gui improvements on mainWindow added UtilGtk
svn path=/trunk/; revision=251

--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -151,6 +151,7 @@
     <Compile Include="src\treeViewReactionTime.cs" />
     <Compile Include="src\treeViewRun.cs" />
     <Compile Include="src\util.cs" />
+    <Compile Include="src\utilGtk.cs" />
     <Compile Include="src\updateProgressBar.cs" />
     <Compile Include="src\prepareEventGraphObjects.cs" />
     <Compile Include="src\execute\event.cs" />
