finished gtk2 integration, Bug 433446 ¿ Convert to gtk-2.0 (Closed). changed obsoleted: -`Gtk.TextBuffer.SetText(string)' is obsolete: `Use the TextBuffer.Text property's setter' -`Gtk.TreeStore.Insert(out Gtk.TreeIter, int)' is obsolete: `Replaced by InsertNode' (same for Append and AppendNode) -`GLib.Object.Data' is obsolete
Added description of every event on all main treeviews (but pulse and reactionTime still have no "edit" implemented)

fixed bug in jumpsLimited assignement on jumpRj
fixed gnome dependency on glade. (works with Glade 2.12.1)

svn path=/trunk/; revision=254

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -47,6 +47,7 @@ src/stats/rjIndex.cs
 src/stats/rjPotencyBosco.cs
 src/stats/sjCmjAbk.cs
 src/stats/sjCmjAbkPlus.cs
+src/treeViewEvent.cs
 src/treeViewJump.cs
 src/treeViewPerson.cs
 src/treeViewPulse.cs
