-guis EditJump, EditJumpRj, EditRun, EditRunInterval now inherit from the new gui/event.cs EditEvent -added EditReactionTime and EditPulse (both inherit from EditEvent)
-when an event is deleted edit, repair and delete buttons are hidden because nothing is selected (not done in delete last, because the selected can be another event)

-hidden pulse more, last (unimplemented)

svn path=/trunk/; revision=275

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -16,6 +16,7 @@ src/gui/person.cs
 src/gui/preferences.cs
 src/gui/pulse.cs
 src/gui/repetitiveConditions.cs
+src/gui/reactionTime.cs
 src/gui/report.cs
 src/gui/run.cs
 src/gui/runType.cs
