--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -9,6 +9,7 @@ src/execute/reactionTime.cs
 src/execute/run.cs
 src/exportSession.cs
 src/gui/chronojump.cs
+src/gui/convertWeight.cs
 src/gui/event.cs
 src/gui/helpPorts.cs
 src/gui/jump.cs
