--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -28,8 +28,10 @@ src/jumpType.cs
 src/platform.cs
 src/report.cs
 src/runType.cs
+src/sqlite/personSession.cs
 src/sqlite/speciallity.cs
 src/sqlite/sport.cs
+src/sqlite/session.cs
 src/sqlite/stat.cs
 src/statType.cs
 src/stats/potency.cs
