Add missing file. Updated Norwegian bokmål translation.
2008-10-07  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Add missing file.
	* nb.po: Updated Norwegian bokmål translation.

svn path=/trunk/; revision=419

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -26,6 +26,7 @@ src/gui/session.cs
 src/gui/stats.cs
 src/jumpType.cs
 src/platform.cs
+src/pulseType.cs
 src/report.cs
 src/runType.cs
 src/sqlite/country.cs
