23 jan 2008 0.8.1.3 insert session now insert all it's persons
23 jan 2008
	0.8.1.3
	insert session now insert all it's persons

	added src/serverEvaluator.cs, remember to svn add

	0.8.1.2
	Finished the server SPing, SEvaluator, server session code
	done server stats with: pings, evaluators,
	sessions, persons. TODO: tests

	db 0.60: 
	-added volumeOn and evaluatorServerID to preferences. 
	-Session has serverUniqueID. Simulated tests now are -1, because 0 is real and
	positive is serverUniqueID
	
	convertedTables of tests to put a serverUniqueID 
		simulated now contains the serverUniqueID:
		-1 simulated test
		0 real test not uploaded
		>0 serverUniqueID of uploaded test


	try-catch on sound playing



svn path=/trunk/; revision=442

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -31,9 +31,10 @@ src/report.cs
 src/runType.cs
 src/sqlite/country.cs
 src/sqlite/personSession.cs
+src/sqlite/server.cs
+src/sqlite/session.cs
 src/sqlite/speciallity.cs
 src/sqlite/sport.cs
-src/sqlite/session.cs
 src/sqlite/stat.cs
 src/statType.cs
 src/stats/potency.cs
