Use assembly attributes and reflection to get the version number and more info if needed

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -145,6 +145,7 @@ FILES = \
 	execute/reactionTime.cs\
 	execute/multiChronopic.cs\
 	../chronojump_server/ChronojumpServer.cs\
+	AssemblyInfo.cs\
 	chronojump.cs\
  	person.cs\
  	event.cs\
