Add docs to autototools 	src/chronojump.cs: Use the new GetPrefixDir() method 	src/util.cs: New Method GetPrefixDir() to get the installation path

--- a/configure.ac
+++ b/configure.ac
@@ -64,6 +64,7 @@ chronopic-tests/Makefile
 src/Makefile
 po/Makefile
 chronojump_server/Makefile
+manual/Makefile
 src/chronojump
 src/chronojump_mini
 src/chronojump.desktop
