new personNotUpload to disallow a person to be uploaded from a session db: 0.71: table personNotUpload. updated sqlite diagram
improved sql status on thread management on start using allSQLCallsDoneOnSqliteThingsThread
fixed crash on languages with decimal: ',' on creation of database
better decimal separator on sqlite main

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -128,6 +128,7 @@ FILES = \
  	sqlite/runInterval.cs\
  	sqlite/runType.cs\
  	sqlite/personSession.cs\
+ 	sqlite/personSessionNotUpload.cs\
  	sqlite/stat.cs\
  	sqlite/pulse.cs\
  	sqlite/pulseType.cs\
