Deploy chronojump.png and report_web_style.css

--- a/Makefile.include
+++ b/Makefile.include
@@ -69,7 +69,9 @@ linuxdesktopapplicationsdir = @datadir@/applications
 linuxdesktopapplications_DATA = $(LINUX_DESKTOPAPPLICATIONS)
 programfilesdir = @libdir@/@PACKAGE@
 programfiles_DATA = $(PROGRAMFILES)
-commonapplicationdatarootimagesdir = @datadir@/images
+commonapplicationdatarootdir = @datadir@/@PACKAGE@/
+commonapplicationdataroot_DATA = $(COMMONAPPLICATIONDATA_ROOT)
+commonapplicationdatarootimagesdir = @datadir@/@PACKAGE@/images
 commonapplicationdatarootimages_DATA = $(COMMONAPPLICATIONDATAROOT_IMAGES)
 commonapplicationdatarootlogodir = @datadir@/icons/hicolor/48x48/apps/
 commonapplicationdatarootlogo_DATA = $(COMMONAPPLICATIONDATAROOT_LOGO)
