--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,7 +27,11 @@ endif
 AL=al2
 SATELLITE_ASSEMBLY_NAME=$(notdir $(basename $(ASSEMBLY))).resources.dll
 
-COMMONAPPLICATIONDATAROOT_IMAGES = 
+COMMONAPPLICATIONDATAROOT_IMAGES = \
+	../images/chronojump_logo.png
+
+COMMONAPPLICATIONDATA_ROOT = \
+	../images/report_web_style.css
  
 
 PROGRAMFILES = \
@@ -54,7 +58,7 @@ BINARIES = \
 
 RESGEN=resgen2
 	
-all: $(ASSEMBLY) $(COMMONAPPLICATIONDATAROOT_IMAGES) $(COMMONAPPLICATIONDATAROOT_LOGO) $(PROGRAMFILES) $(LINUX_DESKTOPAPPLICATIONS) $(BINARIES) 
+all: $(ASSEMBLY) $(COMMONAPPLICATIONDATA_ROOT) $(COMMONAPPLICATIONDATAROOT_IMAGES) $(COMMONAPPLICATIONDATAROOT_LOGO) $(PROGRAMFILES) $(LINUX_DESKTOPAPPLICATIONS) $(BINARIES) 
 
 FILES = \
 	gui/chronojump.cs\
@@ -312,7 +316,7 @@ DLL_REFERENCES =  \
 	../build/data/linux_dlls/NPlot.Gtk.dll
 
 
-CLEANFILES = $(COMMONAPPLICATIONDATAROOT_IMAGES) $(COMMONAPPLICATIONDATAROOT_LOGO) $(PROGRAMFILES) $(LINUX_DESKTOPAPPLICATIONS) $(BINARIES) 
+CLEANFILES = $(COMMONAPPLICATIONDATA_ROOT) $(COMMONAPPLICATIONDATAROOT_IMAGES) $(COMMONAPPLICATIONDATAROOT_LOGO) $(PROGRAMFILES) $(LINUX_DESKTOPAPPLICATIONS) $(BINARIES) 
 
 
 include $(top_srcdir)/Makefile.include
