Doing queryServer.cs server menu / view server website server manually ping / returns online or offline bigger button to end repetitive tests
fixed four bugs:
-fixed crash on repair jump reactive with some "-1".
when a tc or tf is not present, was converted to "-" by Util.TrimDecimals(string, int)
changed and now verifying doesn't affect to other places
-fixed bug (can be a crash) on exportSession, exporting runInterval takes limited db column instead of simualted
-fixed report_web_style.css adding
-fixed multiChronopic and runAnalysis calls on menus

manual converted to book style, done pulses, MultiChronopic, preferences, AVG SD RjIndex, AVG SD QIndex. Fixed export info

supressed some debug WriteLines

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -93,6 +93,7 @@ FILES = \
 	gui/server.cs\
 	gui/dialogServerStats.cs\
  	gui/evaluator.cs\
+ 	gui/queryServer.cs\
 	statType.cs\
 	stats/main.cs\
 	stats/global.cs\
