--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -176,6 +176,7 @@ FILES = \
  	treeViewReactionTime.cs\
  	treeViewMultiChronopic.cs\
  	util.cs\
+ 	utilDate.cs\
 	utilGtk.cs\
 	constants.cs\
  	report.cs\
@@ -317,7 +318,8 @@ DLL_REFERENCES =  \
 	../build/data/linux_dlls/NPlot.Gtk.dll
 
 
-CLEANFILES = $(COMMONAPPLICATIONDATA_ROOT) $(COMMONAPPLICATIONDATAROOT_IMAGES) $(COMMONAPPLICATIONDATAROOT_LOGO) $(PROGRAMFILES) $(LINUX_DESKTOPAPPLICATIONS) $(BINARIES) 
+#CLEANFILES = $(COMMONAPPLICATIONDATA_ROOT) $(COMMONAPPLICATIONDATAROOT_IMAGES) $(COMMONAPPLICATIONDATAROOT_LOGO) $(PROGRAMFILES) $(LINUX_DESKTOPAPPLICATIONS) $(BINARIES) 
+CLEANFILES = $(PROGRAMFILES) $(LINUX_DESKTOPAPPLICATIONS) $(BINARIES) 
 
 
 include $(top_srcdir)/Makefile.include
