--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,6 +4,7 @@ src/chronojump.cs
 src/chronojump_mini.cs
 src/constants.cs
 src/execute/jump.cs
+src/execute/multiChronopic.cs
 src/execute/pulse.cs
 src/execute/reactionTime.cs
 src/execute/run.cs
@@ -11,24 +12,31 @@ src/exportSession.cs
 src/gui/chronojump.cs
 src/gui/convertWeight.cs
 src/gui/event.cs
+src/gui/evaluator.cs
+src/gui/eventExecute.cs
 src/gui/helpPorts.cs
 src/gui/jump.cs
 src/gui/jumpType.cs
+src/gui/multiChronopic.cs
 src/gui/person.cs
 src/gui/preferences.cs
 src/gui/pulse.cs
+src/gui/queryServer.cs
 src/gui/repetitiveConditions.cs
 src/gui/reactionTime.cs
 src/gui/report.cs
 src/gui/run.cs
 src/gui/runType.cs
 src/gui/session.cs
+src/gui/server.cs
 src/gui/stats.cs
 src/jumpType.cs
 src/platform.cs
 src/pulseType.cs
 src/report.cs
 src/runType.cs
+src/server.cs
+src/serverPing.cs
 src/sqlite/country.cs
 src/sqlite/personSession.cs
 src/sqlite/server.cs
@@ -64,6 +72,7 @@ src/stats/sjCmjAbk.cs
 src/stats/sjCmjAbkPlus.cs
 src/treeViewEvent.cs
 src/treeViewJump.cs
+src/treeViewMultiChronopic.cs
 src/treeViewPerson.cs
 src/treeViewPulse.cs
 src/treeViewReactionTime.cs
