[autotools] Compile NPlot from sources to avoid using precompiled binaries

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,8 +6,8 @@ EXTRA_DIST = 	build/data/linux_dlls/NPlot.dll\
 ACLOCAL_AMFLAGS = -I m4
 
 if ENABLE_DEBUG
- SUBDIRS =  chronojump_server chronopic-tests  src po manual
+ SUBDIRS =  chronojump_server chronopic-tests   nplot src po manual 
 endif
 if ENABLE_RELEASE
- SUBDIRS = chronojump_server chronopic-tests  src po manual
+ SUBDIRS = chronojump_server chronopic-tests   nplot src po manual 
 endif
