done barplot, lines, XY compiles without nplot stuff

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,8 +3,8 @@ EXTRA_DIST =
 ACLOCAL_AMFLAGS = -I m4
 
 if ENABLE_DEBUG
- SUBDIRS =  chronojump_server chronopic-tests   nplot src po manual 
+ SUBDIRS =  chronojump_server chronopic-tests   src po manual 
 endif
 if ENABLE_RELEASE
- SUBDIRS = chronojump_server chronopic-tests   nplot src po manual 
+ SUBDIRS = chronojump_server chronopic-tests   src po manual 
 endif
