--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 
-EXTRA_DIST =  chronojump_mini.cs ../images/report_web_style.css
+EXTRA_DIST =  chronojump_mini.cs ../images/report_web_style.css angle/*
 
 
 if ENABLE_DEBUG
