Add R to the debian deps

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,8 @@ Package: chronojump
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},mono-runtime, 
  libgtk2.0-cil, libmono2.0-cil, libmono-data2.0-cil,
- libmono-sqlite2.0-cil, libmono-posix2.0-cil, libmono-winforms2.0-cil
+ libmono-sqlite2.0-cil, libmono-posix2.0-cil, libmono-winforms2.0-cil,
+ r-base-core
 Description: ChronoJump
  ChronoJump is an open hardware, free software, multiplatform complete system for measurement, management and statistics of sport short-time tests.
  Chronojump uses contact platform and/or photocells, and also a chronometer printed circuit designed ad-hoc in order to obtain precise and trustworthy measurements.
