--- a/configure.ac
+++ b/configure.ac
@@ -14,6 +14,11 @@ if test "x$PKG_CONFIG" = "xno"; then
         AC_MSG_ERROR([You need to install pkg-config])
 fi
 
+SHAMROCK_EXPAND_LIBDIR
+SHAMROCK_EXPAND_BINDIR
+SHAMROCK_EXPAND_DATADIR
+
+
 AC_PROG_INSTALL
 
 dnl Check for C# compiler
