--- a/src/chronojump.in
+++ b/src/chronojump.in
@@ -1,3 +1,3 @@
 #!/bin/sh
 
-exec mono "@prefix@/lib/@PACKAGE_TARNAME@/Chronojump.exe" "$@"
+exec mono "@expanded_libdir@/@PACKAGE@/Chronojump.exe" "$@"
