--- a/src/chronojump_mini.in
+++ b/src/chronojump_mini.in
@@ -1,3 +1,3 @@
 #!/bin/sh
 
-exec mono "@prefix@/lib/@PACKAGE_TARNAME@/Chronojump_Mini.exe" "$@"
+exec mono "@expanded_libdir@/@PACKAGE@/Chronojump_Mini.exe" "$@"
