Auto-generate ChangeLog in 'make dist' using git-log

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,3 +8,13 @@ endif
 if ENABLE_RELEASE
  SUBDIRS = chronojump_server chronopic-tests   src po manual 
 endif
+
+# Build ChangeLog from GIT history
+ChangeLog:
+	@if test -f $(top_srcdir)/.git/HEAD; then \
+		git log --pretty=format:'%ad %an <%ae>%n%s ' --stat --after="Jul 01 23:47:57 2009" > $@; \
+	fi
+
+dist: ChangeLog
+
+.PHONY: ChangeLog
