All chronopic stuff now into chronopic window lots of changes in main gui and preferences
now delete a session, deletes all tests, and deletes person if orphan
now delete a person from session also deletes its multiChronopic

other gui changes:
-quit -> standard gnome exit
-File -> Session
-windows -> tools
-preferences on tools
-chronopic window on tools

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -56,6 +56,7 @@ all: $(ASSEMBLY) $(COMMONAPPLICATIONDATA_ROOT) $(COMMONAPPLICATIONDATAROOT_IMAGE
 
 FILES = \
 	gui/chronojump.cs\
+	gui/chronopic.cs\
 	gui/confirm.cs\
 	gui/error.cs\
 	gui/eventExecute.cs\
