putting decimals in person and personSessionWeight (height and weight). DB: 0.75 Tests remain.

--- a/Makefile.win32
+++ b/Makefile.win32
@@ -111,6 +111,7 @@ CHRONOJUMP_FILES = \
 	AssemblyInfo.cs\
 	chronojump.cs\
  	person.cs\
+ 	personSession.cs\
  	event.cs\
  	eventType.cs\
  	jump.cs\
